[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/AeroSurface.gd" type="Script" id=1]
[ext_resource path="res://scenes/Missile.gd" type="Script" id=2]
[ext_resource path="res://resources/Plane_Metal.tres" type="Material" id=3]
[ext_resource path="res://scenes/FPV_HUD.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.1
height = 1.5

[node name="Missile" type="VehicleBody"]
continuous_cd = true
can_sleep = false
angular_damp = 20.0
script = ExtResource( 2 )

[node name="AeroSurface_Fuse" type="Spatial" parent="."]
script = ExtResource( 1 )
length_chord_root = 0.001
length_chord_tip = 0.001
length_span = 0.001

[node name="CSGCylinder" type="CSGCylinder" parent="AeroSurface_Fuse"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
radius = 0.1
height = 1.5
sides = 32
smooth_faces = false
material = ExtResource( 3 )

[node name="CSGSphere" type="CSGSphere" parent="AeroSurface_Fuse/CSGCylinder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0 )
radius = 0.1
radial_segments = 32
rings = 32
smooth_faces = false
material = ExtResource( 3 )

[node name="CSGSphere2" type="CSGSphere" parent="AeroSurface_Fuse/CSGCylinder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, 0 )
radius = 0.1
radial_segments = 32
rings = 32
smooth_faces = false
material = ExtResource( 3 )

[node name="AeroSurface_Fin_F1" type="Spatial" parent="."]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0.14, 0.14, -0.4 )
script = ExtResource( 1 )
length_chord_root = 0.2
length_chord_tip = 0.2
length_span = 0.2

[node name="CSGCylinder" type="CSGCylinder" parent="AeroSurface_Fin_F1"]
transform = Transform( 0, 1, 0, -0.1, -8.9407e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.1
height = 0.2
sides = 32
smooth_faces = false
material = ExtResource( 3 )

[node name="AeroSurface_Fin_F2" type="Spatial" parent="."]
transform = Transform( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, -0.14, 0.14, -0.4 )
script = ExtResource( 1 )
length_chord_root = 0.2
length_chord_tip = 0.2
length_span = 0.2

[node name="CSGCylinder" type="CSGCylinder" parent="AeroSurface_Fin_F2"]
transform = Transform( 0, 1, 0, -0.1, -8.9407e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.1
height = 0.2
sides = 32
smooth_faces = false
material = ExtResource( 3 )

[node name="AeroSurface_Fin_F3" type="Spatial" parent="."]
transform = Transform( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, 0.14, -0.14, -0.4 )
script = ExtResource( 1 )
length_chord_root = 0.2
length_chord_tip = 0.2
length_span = 0.2

[node name="CSGCylinder" type="CSGCylinder" parent="AeroSurface_Fin_F3"]
transform = Transform( 0, 1, 0, -0.1, -8.9407e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.1
height = 0.2
sides = 32
smooth_faces = false
material = ExtResource( 3 )

[node name="AeroSurface_Fin_F4" type="Spatial" parent="."]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, -0.14, -0.14, -0.4 )
script = ExtResource( 1 )
length_chord_root = 0.2
length_chord_tip = 0.2
length_span = 0.2

[node name="CSGCylinder" type="CSGCylinder" parent="AeroSurface_Fin_F4"]
transform = Transform( 0, 1, 0, -0.1, -8.9407e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.1
height = 0.2
sides = 32
smooth_faces = false
material = ExtResource( 3 )

[node name="CollisionShape_Fuse" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.85 )
far = 50000.0

[node name="FPV_HUD" parent="Camera" instance=ExtResource( 4 )]

[node name="AeroSurface_Fin_R1" type="Spatial" parent="."]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0.14, 0.14, 0.6 )
script = ExtResource( 1 )
length_chord_root = 0.2
length_chord_tip = 0.2
length_span = 0.2

[node name="CSGCylinder" type="CSGCylinder" parent="AeroSurface_Fin_R1"]
transform = Transform( 0, 1, 0, -0.1, -8.9407e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.1
height = 0.2
sides = 32
smooth_faces = false
material = ExtResource( 3 )

[node name="AeroSurface_Fin_R2" type="Spatial" parent="."]
transform = Transform( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, -0.14, 0.14, 0.6 )
script = ExtResource( 1 )
length_chord_root = 0.2
length_chord_tip = 0.2
length_span = 0.2

[node name="CSGCylinder" type="CSGCylinder" parent="AeroSurface_Fin_R2"]
transform = Transform( 0, 1, 0, -0.1, -8.9407e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.1
height = 0.2
sides = 32
smooth_faces = false
material = ExtResource( 3 )

[node name="AeroSurface_Fin_R3" type="Spatial" parent="."]
transform = Transform( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, 0.14, -0.14, 0.6 )
script = ExtResource( 1 )
length_chord_root = 0.2
length_chord_tip = 0.2
length_span = 0.2

[node name="CSGCylinder" type="CSGCylinder" parent="AeroSurface_Fin_R3"]
transform = Transform( 0, 1, 0, -0.1, -8.9407e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.1
height = 0.2
sides = 32
smooth_faces = false
material = ExtResource( 3 )

[node name="AeroSurface_Fin_R4" type="Spatial" parent="."]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, -0.14, -0.14, 0.6 )
script = ExtResource( 1 )
length_chord_root = 0.2
length_chord_tip = 0.2
length_span = 0.2

[node name="CSGCylinder" type="CSGCylinder" parent="AeroSurface_Fin_R4"]
transform = Transform( 0, 1, 0, -0.1, -8.9407e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.1
height = 0.2
sides = 32
smooth_faces = false
material = ExtResource( 3 )
